cmake_minimum_required(VERSION 3.0.0)
project(PANN VERSION 0.1.0)
#=============================================----[CMAKE_CONFIGURATIONS]---====================================================
set (CMAKE_CXX_STANDARD 11)
#=============================================----[ADD_LIBRARIES]---===========================================================
#=============================================----[TESTS_CONFIGURATION]---=====================================================
include(CTest)
enable_testing()
#=============================================----[ADD_SUB_DIRECTORIES]---=====================================================
add_subdirectory( tests )
add_subdirectory(include)
add_subdirectory(src)
#=============================================----[ADD_SUB_DIRECTORIES]---=====================================================
